@@ -2,24 +2,24 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Network Maps Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.networkmaps;singleton:=true
-Bundle-Version: 2.0.8
+Bundle-Version: 2.1.0
 Bundle-Activator: org.netxms.ui.eclipse.networkmaps.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.10",
- org.netxms.ui.eclipse.console;bundle-version="2.0.10",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.1.3",
+ org.netxms.ui.eclipse.console;bundle-version="2.1.3",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="2.1.1",
  org.netxms.ui.eclipse.imagelibrary;bundle-version="2.0.0",
  org.netxms.ui.eclipse.osm;bundle-version="2.0.8",
- org.netxms.ui.eclipse.charts;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.charts;bundle-version="2.0.5",
  org.eclipse.draw2d;bundle-version="3.10.100",
- org.netxms.ui.eclipse.nxsl;bundle-version="2.0.4",
- org.netxms.gef4.zest.core;bundle-version="2.0.5",
- org.netxms.gef4.zest.jface;bundle-version="2.0.5",
- org.netxms.gef4.zest.layouts;bundle-version="2.0.5",
- org.netxms.ui.eclipse.objectview;bundle-version="2.0.7",
- org.netxms.ui.eclipse.datacollection;bundle-version="2.0.7"
+ org.netxms.ui.eclipse.nxsl;bundle-version="2.0.7",
+ org.netxms.gef4.zest.core;bundle-version="2.0.6",
+ org.netxms.gef4.zest.jface;bundle-version="2.0.6",
+ org.netxms.gef4.zest.layouts;bundle-version="2.0.6",
+ org.netxms.ui.eclipse.objectview;bundle-version="2.1.0",
+ org.netxms.ui.eclipse.datacollection;bundle-version="2.1.0"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.networkmaps.algorithms,
